added open phrase generation from bing with grounding search (is better caues it handles security issues and ranking implicitly)

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -48,6 +48,7 @@
       "AZURE_STORAGE_CONTAINER",
       "AZURE_FOUNDRY_AGENT_ID_VALIDATOR",
       "AZURE_FOUNDRY_AGENT_ID_ALIAS_KEYWORD_EXTRACTOR",
+      "AZURE_FOUNDRY_AGENT_ID_OPEN_PHRASE_GENERATOR",
       "LOGIC_APP_CONNECTION_ID_GET_HTTP_ENDPOINT",
       "WIKIPEDIA_ENDPOINT",
       "WIKIPEDIA_CLIENT_SECRET",
